--- a/ispconf/tasks/ftpdedbian.yml
+++ b/ispconf/tasks/ftpdedbian.yml
@@ -1,6 +1,7 @@
 ---
-- hosts: test 
+- hosts: ispconf
   gather_facts: yes
+  remote_user: root
   tasks:
    - name: update
      apt:
@@ -15,7 +16,7 @@
    - name: edit hostname
      hostname: 
       name: ftp
-   - name: editbash
+   - name: edit bash
      file:
       src: /bin/bash
       dest: /bin/sh
