--- a/roles/ubuntu_inic/tasks/mysql_inic.yml
+++ b/roles/ubuntu_inic/tasks/mysql_inic.yml
@@ -60,10 +60,32 @@
           state: present
 - name: Create a database
   mysql_db: name=test collation=utf8_general_ci encoding=utf8 state=present
+notify: restart mysql
+  
+- name: create local.ini
+  template:
+    src: local.ini.j2
+    dest: /etc/php/5.6/mods-available/local.ini
+    
+- name: symlink local.ini
+  file:
+    src: /etc/php/5.6/mods-available/local.ini
+    dest: "{{ item }}"
+    state: link
+    force: yes
+  with_items: 
+    - /etc/php/5.6/apache2/conf.d/20-local.ini
+    - /etc/php/5.6/cli/conf.d/20-local.ini
+    
+- name: set group concat variable
+  mysql_variables: 
+    variable: group_concat_max_len
+    value: 100000
+  notify: restart mysql
+            
+#- shell: mysql --version
+#   register: mysql_version
 
-- name: start mysql
-  systemd:
-          name: mysql
-          state: restarted
-          enabled: yes
-
+#- name: 
+#  when: mysql_version != 15.2
+  
