--- a/roles/ubuntu_inic/tasks/conf_apache.yml
+++ b/roles/ubuntu_inic/tasks/conf_apache.yml
@@ -61,4 +61,19 @@
     - /etc/php/5.6/apache2/conf.d/20-local.ini
     - /etc/php/5.6/cli/conf.d/20-local.ini
 
+- name: create www home dir
+  file:
+          path: "/home/{{ new_sys_user }}/.www/localhost/"
+          state: directory
+          mode: 0775
+          owner: "{{ new_sys_user }}"
+          group: "{{ new_sys_user }}"
+
+- name: symlink phpmyadmin
+  file:
+    src: /usr/share/phpmyadmin
+    dest: ~/.www/localhost/phpmyadmin
+    state: link
+    force: yes
+
 ...
