--- a/roles/ubuntu_inic/defaults/main.yml
+++ b/roles/ubuntu_inic/defaults/main.yml
@@ -41,3 +41,8 @@ npm_packages:
         - bower
         - grunt-cli
         - napa
+
+home_dirs:
+        - "/home/{{ new_sys_user }}/work/ipo"
+        - "/home/{{ new_sys_user }}/work/mysql/backups"
+
